test/corpus/abbreviations.txt
==================
Abbreviation does not end the sentence
==================

Mr. Smith arrived.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (period)
        (word)
        (word)))))

==================
Initialism run stays one sentence
==================

The H.M.S. Beagle sailed.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (dotted)
        (word)
        (word)))))

==================
Unknown abbreviation with lowercase continuation
==================

The dept. said it would close.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (period)
        (word)
        (word)
        (word)
        (word)))))

==================
Decimal number keeps its dot
==================

It cost 3.50 dollars.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (number)
        (word)))))

==================
Sentence still splits after an abbreviation
==================

Mr. Smith arrived. He stayed.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (period)
        (word)
        (word)))
    (sentence
      (clause
        (word)
        (word)))))

==================
Lowercase continuation across e.g.
==================

Bring tools, e.g. a hammer.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (dotted)
        (word)
        (word)))))

==================
Abbreviation before a sentence-final mark
==================

Did Dr. Jones arrive?

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (period)
        (word)
        (word)))))

==================
Spaced single-letter initial does not end the sentence
==================

J. Smith arrived.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (period)
        (word)
        (word)))))

==================
Pronoun I still ends a sentence
==================

It is I. You are next.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word)))
    (sentence
      (clause
        (word)
        (word)
        (word)))))

==================
Title does not end the sentence
==================

Rev. Henry arrived.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (period)
        (word)
        (word)))))

==================
Mount does not end the sentence
==================

Mt. Hecla erupted.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (period)
        (word)
        (word)))))

==================
Conjunction word at sentence start lexes as a word
==================

For home he left.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word)
        (word)))))
