test/corpus/hyphens.txt
==================
Hyphenated compound
==================

The well-known fact stood.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word)
        (word)))))

==================
Capitalized hyphenated compound
==================

The Mast-Head stood tall.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word)
        (word)))))

==================
Multiply hyphenated compound
==================

My mother-in-law arrived.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word)))))

==================
Elided compound with apostrophe-hyphen
==================

Here comes another with a sou’-wester and a bombazine cloak.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word)
        (word)
        (word)
        (word))
      (conjunction)
      (clause
        (word)
        (word)
        (word)))))

==================
Digit range stays one number
==================

During the winter of 1881-82, I saw a notice.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word)
        (word)
        (number)
        (word)
        (word)
        (word)
        (word)))))

==================
Ampersand inside a word
==================

The R&D division met today.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word)
        (word)
        (word)))))

==================
Letter-digit code stays one word
==================

The M-3 robot rumbled loudly.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word)
        (word)
        (word)))))

==================
Digit-led compound stays one number
==================

An 18-pounder gun fired twice.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (number)
        (word)
        (word)
        (word)))))
