test/corpus/punctuation.txt
==================
Semicolon joins coordinate clauses
==================

I came; I saw; I conquered.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word))
      (semicolon)
      (clause
        (word)
        (word))
      (semicolon)
      (clause
        (word)
        (word)))))

==================
Colon introduces elaborating clause
==================

He left early: the train was departing.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word))
      (colon)
      (clause
        (word)
        (word)
        (word)
        (word)))))

==================
Em-dash introduces elaborating clause
==================

He left early — the train was departing.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word))
      (em_dash)
      (clause
        (word)
        (word)
        (word)
        (word)))))

==================
Curly double quotes around a sentence
==================

“Hello world.”

---

(source_file
  (paragraph
    (sentence
      (clause
        (quote)
        (word)
        (word)))))

==================
Curly apostrophe in a possessive
==================

The ship’s hull was damaged.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word)
        (word)
        (word)))))

==================
Semicolon with conjunctive adverb
==================

He was tired; however, he continued.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word))
      (semicolon)
      (clause
        (word)
        (word)
        (word)))))

==================
Expanded subordinator: unless
==================

He left unless she called.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word))
      (subordinate_clause
        (subordinator)
        (word)
        (word)))))

==================
Expanded subordinator: whereas
==================

She likes tea whereas he likes coffee.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word))
      (subordinate_clause
        (subordinator)
        (word)
        (word)
        (word)))))

==================
Expanded subordinator: whether
==================

I doubt whether he will come.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word))
      (subordinate_clause
        (subordinator)
        (word)
        (word)
        (word)))))

==================
Em-dash after a question hands off to a new sentence
==================

Will he perish?—Will she stay?

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word))
      (em_dash))
    (sentence
      (clause
        (word)
        (word)
        (word)))))

==================
Em-dash after a period hands off to a new sentence
==================

He came.—She left.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word))
      (em_dash))
    (sentence
      (clause
        (word)
        (word)))))

==================
Em-dash join and handoff in one sentence pair
==================

To lay him down, breath—O Father!—chiefly known.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word)
        (word)
        (word))
      (em_dash)
      (clause
        (word)
        (word))
      (em_dash))
    (sentence
      (clause
        (word)
        (word)))))

==================
Trailing that before an em-dash reads as a plain word
==================

Do this—remember that—and obey.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word))
      (em_dash)
      (clause
        (word)
        (word))
      (em_dash)
      (clause
        (word)
        (word)))))

==================
Trailing and before an em-dash reads as a plain word
==================

It was marvellous and—in this instance—almost fatal.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word)
        (word))
      (em_dash)
      (clause
        (word)
        (word)
        (word))
      (em_dash)
      (clause
        (word)
        (word)))))

==================
Semicolon plus em-dash introduces elaboration
==================

As a general thing;—no, I never go.

---

(source_file
  (paragraph
    (sentence
      (subordinate_clause
        (subordinator)
        (word)
        (word)
        (word))
      (semicolon)
      (em_dash)
      (clause
        (word)
        (word)
        (word)
        (word)))))

==================
Colon plus em-dash introduces elaboration
==================

The Spouter Inn:—Peter Coffin.

---

(source_file
  (paragraph
    (sentence
      (clause
        (word)
        (word)
        (word))
      (colon)
      (em_dash)
      (clause
        (word)
        (word)))))
